--- a/index.css
+++ b/index.css
@@ -1,10 +1,3 @@
-/* @media only screen and (min-width: 375px) {
-    [class*="col-"] {
-      display: flex;
-      justify-content: center;
-    }
-} */
-
 @media only screen and (max-width: 600px) {
     .display-4 {
       font-size: 24px;
@@ -100,17 +93,21 @@ p {
 #previousBtn {
     background: none;
     border: none;
-    color: white;
-    font-size: 16px;
-    font-weight: 700;
+    color: black;
+    font-family: thor;
+    font-weight: 200;
+    font-size: 12px;
+    text-shadow:white 0px 0px 4px,white 0px 0px 4px,white 0px 0px 4px,white 0px 0px 4px, white 0px 0px 4px, white 0px 0px 4px;
 }
 
 #nextBtn {
     background: none;
     border: none;
-    color: white;
-    font-size: 16px;
-    font-weight: 700;
+    color: black;
+    font-family: thor;
+    font-weight: 200;
+    font-size: 12px;
+    text-shadow:white 0px 0px 4px,white 0px 0px 4px,white 0px 0px 4px,white 0px 0px 4px, white 0px 0px 4px, white 0px 0px 4px;
 }
 
 #previousBtnImg {
